--- a/assets/style.css
+++ b/assets/style.css
@@ -53,9 +53,7 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
-body {
 
-}
 section {
 	margin-block: 6em;
 }
@@ -125,12 +123,16 @@ header {
 /* Gestion des fleches du carrousel */
 #banner .arrow {
 	position: absolute;
+	cursor: pointer;
+	top: 42%;
 }
 #banner .arrow_left {
-	left: 10px;
+	position: absolute;
+	right: 615px;
 }
 #banner .arrow_right {
-	right: 10px;
+	position: absolute;
+	left: 615px;
 }
 /* Gestion des points du carrousel */
 .dots {
