--- a/assets/style.css
+++ b/assets/style.css
@@ -123,16 +123,18 @@ header {
 /* Gestion des fleches du carrousel */
 #banner .arrow {
 	position: absolute;
-	cursor: pointer;
-	top: 42%;
+	/* cursor: pointer; */
+	/* top: 42%; */
 }
 #banner .arrow_left {
-	position: absolute;
-	right: 615px;
+	/* position: absolute;
+	right: 615px; */
+	left: 10px;
 }
 #banner .arrow_right {
-	position: absolute;
-	left: 615px;
+	/* position: absolute;
+	left: 615px; */
+	right: 10px;
 }
 /* Gestion des points du carrousel */
 .dots {
